syntax = "proto3";

package user;

// PlayerState 玩家状态
enum PlayerState{
    PS_IDIE = 0;     // 空闲中
    PS_MATCHING = 1; // 匹配中
    PS_GAMEING = 2;  // 游戏中
}

// ServerType 服务类型
enum ServerType{
    ST_GATE = 0;  // 网关服
    ST_MATCH = 1; // 匹配服
    ST_ROOM = 2;  // 房间服
}

// GetPlayerByAccountReq 根据账号获取玩家请求
message GetPlayerByAccountReq {
    uint64 account_id = 1; // 账号 ID 
}

// GetPlayerByAccountRsp 根据账号获取玩家应答
message GetPlayerByAccountRsp { 
    int32 err_code = 1; // 错误信息
    uint64 player_id = 2; // 玩家 ID
}

// GetPlayerInfoReq 获取玩家信息
message GetPlayerInfoReq {
    uint64 player_id = 1;         // 玩家id
   
}

// GetPlayerInfoRsp 获取玩家信息应答
message GetPlayerInfoRsp {
    int32 err_code = 1;           // 错误信息 
    uint64 player_id = 2;         // 玩家id
    string nick_name = 3;         // 玩家昵称
    string head_image = 4;        // 玩家头像
    uint64 coin = 5;              // 玩家金币数
    PlayerState player_state = 6; // 玩家状态
}

// SetPlayerInfoReq 修改玩家信息
message SetPlayerInfoReq {
    int32 err_code = 1;           // 错误信息
    uint64 player_id = 2;         // 玩家id
    string nick_name = 3;         // 玩家昵称
    string head_image = 4;        // 玩家头像
}

// SetPlayerInfoRsp 修改玩家信息应答
message SetPlayerInfoRsp {
    int32 err_code = 1;           // 错误信息
    bool result = 2; // 返回修改成功或失败
}

// GetPlayerStateReq 获取玩家状态
message GetPlayerStateReq{
    uint64 player_id = 1;
}

// GetPlayerStateRsp 获取玩家状态应答
message GetPlayerStateRsp{
    int32 err_code = 1;           // 错误信息
    PlayerState state = 2;
}

// SetPlayerStateReq 设置玩家状态
message SetPlayerStateReq{
    uint64 player_id = 1;          // 玩家id
    PlayerState old_state = 2;     // 旧状态    
    PlayerState new_state = 3;     // 新状态
    ServerType server_type = 4;    // 服务类型 
    string server_addr = 5;               // 服务地址
}

// SetPlayerStateRsp 设置玩家状态应答
message SetPlayerStateRsp{
    int32 err_code = 1;           // 错误信息
    bool result = 2; // 返回成功或失败
}

// GetGameListInfoReq 获取游戏列表信息
message GetGameListInfoReq{

}

// GetGameListInfoRsp 获取游戏列表信息应答
message GetGameListInfoRsp{
    int32 err_code = 1;           // 错误信息
    repeated uint64 game_id = 2;         // 游戏id
}

// PlayerData 玩家数据服务
service PlayerData {
    // GetPlayerByAccount 根据账号获取玩家
    rpc GetPlayerByAccount(GetPlayerByAccountReq) returns(GetPlayerByAccountRsp);
    // GetPlayerInfo 获取玩家信息
    rpc GetPlayerInfo(GetPlayerInfoReq) returns (GetPlayerInfoRsp);
    // SetPlayerInfo 设置玩家信息
    rpc SetPlayerInfo(SetPlayerInfoReq) returns (SetPlayerInfoRsp);
    // GetPlayerState 获取玩家状态
    rpc GetPlayerState(GetPlayerStateReq) returns (GetPlayerStateRsp);
    // SetPlayerState 设置玩家状态
    rpc SetPlayerState(SetPlayerStateReq) returns (SetPlayerStateRsp) ;
    // GetGameListInfo 获取游戏列表
    rpc GetGameListInfo(GetGameListInfoReq) returns (GetGameListInfoRsp);
}